--- a/src/assets/iconfont/demo_unicode.html
+++ b/src/assets/iconfont/demo_unicode.html
@@ -159,6 +159,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe608;</i>
+                    <div class="name">全屏</div>
+                    <div class="code">&amp;#xe608;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe76c;</i>
                     <div class="name">数据</div>
                     <div class="code">&amp;#xe76c;</div>
