修改拓扑图

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
     <script src="./static/config/index.js"></script>
     <script src="./static/plugins/mock-1.0.0-beta3/mock-min.js"></script>
-    <script src="./src/assets/vis/vis.js"></script>
-    <link href="./src/assets/vis/vis.css" rel="stylesheet" type="text/css" />
+    <!-- <script src="./src/assets/vis/vis.js"></script>
+    <link href="./src/assets/vis/vis.css" rel="stylesheet" type="text/css" /> -->
   <% } %>
 </head>
 <body>
